<resources>
    <string name="VideoView_error_text_unknown">Something wrong with this video.</string>
    <string name="action_add_bookmark">Add bookmark</string>
    <string name="action_back">Back</string>
    <string name="action_blank">Blank page</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_copy">Copy link</string>
    <string name="action_download">Download</string>
    <string name="action_find">Find in page</string>
    <string name="action_folder">Folder</string>
    <string name="action_forward">Forward</string>
    <string name="action_history">History</string>
    <string name="action_homepage">Default</string>
    <string name="action_new_tab">New tab</string>
    <string name="action_no">No</string>
    <string name="action_ok">OK</string>
    <string name="action_open">Open</string>
    <string name="action_rename">Rename</string>
    <string name="action_share">Share</string>
    <string name="action_yes">Yes</string>
    <string name="add_video">video added</string>
    <string name="add_videos">videos added</string>
    <string name="added_success">Added successfully</string>
    <string name="agent_custom">Custom</string>
    <string name="allow">Allow</string>
    <string name="alpha_opac">1.0</string>
    <string name="alpha_semitrans">0.3</string>
    <string name="already_in_list">Already in the list</string>
    <string name="already_in_use">This name is already in use.</string>
    <string name="app_name">UTV Video Player</string>
    <string name="app_name_share"> Android Video Player</string>
    <string name="app_restart">Please restart the app for the change to take effect.</string>
    <string name="auto">Auto</string>
    <string name="auto_rotate">Auto Rotate</string>
    <string name="background_play">Background Play</string>
    <string name="background_play_off">Background Play OFF</string>
    <string name="background_play_on">Background Play ON</string>
    <string name="bass_boost">Bass Boost</string>
    <string name="batch_delete">Batch delete</string>
    <string name="block_ads">Block ads</string>
    <string name="brightness">Brightness :</string>
    <string name="brightness_simple">Brightness</string>
    <string name="browser">Browser</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_download_tip">Due to legal restrictions, videos on YouTube CANNOT be downloaded.</string>
    <string name="cant_load_video">Failed to load video.</string>
    <string name="change_language_title">Select Language</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_history">Clear browser history</string>
    <string name="click_download_button">Click the &lt;font color=\"#f5c144\">download button&lt;/font></string>
    <string name="close_other_tabs">Close other tabs</string>
    <string name="close_tab">Close current tab</string>
    <string name="color">Color</string>
    <string name="confirm">Confirm</string>
    <string name="connecting">Connecting</string>
    <string name="connection_failed">Connection failed</string>
    <string name="contact_us">Contact us</string>
    <string name="contains">Contains</string>
    <string name="continue_text">Continue</string>
    <string name="copy">Copy</string>
    <string name="count_media_file">%d media file</string>
    <string name="count_media_files">%d media files</string>
    <string name="count_sub_folder">%d subfolder</string>
    <string name="count_sub_folders">%d subfolders</string>
    <string name="create_a_download">Create a download</string>
    <string name="custom">Custom</string>
    <string name="custom_url">Custom URL</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="date">Date</string>
    <string name="debug_leak_canary">LeakCanary</string>
    <string name="debug_title">Debug Settings</string>
    <string name="default_filedownloader_notification_content">FileDownloader is running.</string>
    <string name="default_filedownloader_notification_title">FileDownloader</string>
    <string name="delete">Delete</string>
    <string name="delete_dialog_desc">Video in folder will be deleted permanently.</string>
    <string name="delete_dialog_title">Delete folder from device?</string>
    <string name="delete_failed">Delete failed.</string>
    <string name="delete_failed_cant_write">"For the Android limitation, we can't delete files in SD card. You need to delete them manually in gallery."</string>
    <string name="delete_success">Deleted successfully.</string>
    <string name="delete_tip">Are you sure you want to delete it?</string>
    <string name="delete_video_dialog_desc">Video will be deleted permanently.</string>
    <string name="delete_video_dialog_title">Delete video from device?</string>
    <string name="deleted_tab">Reopened old tab</string>
    <string name="desktop_site">Desktop site</string>
    <string name="developed_by_xdplayer">Developed by UTV Video Player.</string>
    <string name="dialog_cookies">Would you like to clear all browser cookies?</string>
    <string name="dialog_copy_link">Copy link</string>
    <string name="dialog_delete_all_downloads">Delete all downloads</string>
    <string name="dialog_download_image">Download image</string>
    <string name="dialog_edit_bookmark">Edit bookmark</string>
    <string name="dialog_history">Would you like to clear all browser history?</string>
    <string name="dialog_open_background_tab">Open in background tab</string>
    <string name="dialog_open_new_tab">Open in new tab</string>
    <string name="dialog_remove_bookmark">Remove bookmark</string>
    <string name="dialog_remove_folder">Remove folder</string>
    <string name="dialog_remove_from_history">Remove from history</string>
    <string name="dialog_rename_folder">Rename folder</string>
    <string name="dialog_title_close_browser">Close browser</string>
    <string name="dialog_title_share">Share this page</string>
    <string name="directories">Directories</string>
    <string name="directory_empty">Directory is empty</string>
    <string name="dismiss">Dismiss</string>
    <string name="done">Done</string>
    <string name="download_wifi_only">Download with Wi-Fi Only</string>
    <string name="downloaded">downloaded %s</string>
    <string name="downloader_app_name">Video Downloader</string>
    <string name="downloading">Downloading…</string>
    <string name="downloads">Downloads</string>
    <string name="email_auto">Input Email Automatically</string>
    <string name="email_error">"Email don't match, please try again."</string>
    <string name="email_format_error">Invalid Email Address</string>
    <string name="email_input">Add an email to prevent you forgetting the PIN.</string>
    <string name="email_input_again">Input your Email again.</string>
    <string name="email_input_forget">Input your Email address for retrieving PIN.</string>
    <string name="email_sent_desc">Please check your JUNK or SPAM folders too.</string>
    <string name="email_sent_title">PIN is sent to your email</string>
    <string name="email_wrong_email">Can not send email to your address successfully</string>
    <string name="email_wrong_email_desc">Please contact us.</string>
    <string name="email_wrong_net">Something wrong with the network</string>
    <string name="email_wrong_net_desc">Please try again.</string>
    <string name="email_wrong_server">Something wrong with the server</string>
    <string name="email_wrong_server_desc">We will send you an email manually. Please check your email later.</string>
    <string name="empty_video">No video found.</string>
    <string name="empty_video_import">Only you can watch video in private folder. Import video now.</string>
    <string name="equalizer">Equalizer</string>
    <string name="error">Error</string>
    <string name="exist_bookmark">Bookmark already exists</string>
    <string name="exit_tip">Press again to exit</string>
     <string name="failed">Failed</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_and_suggestion_hint">Feedback and suggestion</string>
    <string name="feedback_mail_text">System info</string>
    <string name="feedback_not_now">NOT NOW</string>
    <string name="feedback_subject">Feedback to UTV Video Player</string>
    <string name="feedback_submit">SUBMIT</string>
    <string name="file">File</string>
    <string name="file_not_exist">"The file doesn't exist, please download again"</string>
    <string name="finished">Finished</string>
    <string name="folder">Folder name</string>
    <string name="folder_up">Folder up</string>
    <string name="format">Format</string>
    <string name="free">%1$s of %2$s used</string>
    <string name="free_download">FREE DOWNLOAD</string>
    <string name="gallery">Gallery</string>
    <string name="got_it">GOT IT</string>
    <string name="hide_tips">Hide from Scan List</string>
    <string name="home_item_bg">home_item_bg</string>
    <string name="home_item_divider">home_item_divider</string>
    <string name="img_tag">img_tag</string>
    <string name="layout_style">Layout Style</string>
    <string name="lib_rate_btn_cancel">Cancel</string>
    <string name="lib_rate_btn_go_market">Rate on Google play</string>
    <string name="lib_rate_five_stars_confirm_tip">"Other users will benefit from your review.

Please leave your review on Google Play."</string>
    <string name="lib_rate_roboto_medium">sans-serif-medium</string>
    <string name="lib_rate_roboto_regular">sans-serif</string>
    <string name="lock_tips">Lock in Private Folder</string>
    <string name="modify_pin">Modify PIN</string>
    <string name="no_video_resource">Please play the video first, and the download button will be available after %s detects the video.</string>
    <string name="no_video_resource_title">No Video Resource Found</string>
    <string name="none">None</string>
    <string name="permission_explained_title">Why do we need permissions?</string>
    <string name="private_videos">Private Videos</string>
    <string name="properties">Properties</string>
    <string name="refresh">Refresh</string>
    <string name="report_to_us">Report to us</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="roboto_regular">sans-serif</string>
    <string name="search">Search</string>
    <string name="select">Select</string>
    <string name="setting_text_title">setting_text_title</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="sort_by">Sort by</string>
    <string name="subtitle">Subtitle</string>
    <string name="subtitle_adjust">Sync Adjust</string>
    <string name="subtitle_download">Download</string>
    <string name="subtitle_open_from">Open From</string>
    <string name="subtitle_personality">Subtitle Customization</string>
    <string name="temporarily_download">Please temporarily download from other websites.</string>
    <string name="thx_feedback_tip">We will fix it in the future version. Sorry for the inconvenience.</string>
    <string name="thx_feedback_title">Thanks for your feedback</string>
    <string name="unlock">Unlock</string>
    <string name="without_permission">Storage permission is required for downloading files.</string>
    <string name="remove_ad">Remove Ads</string>
</resources>