<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/group_select_mode">
        <item
            android:id="@+id/lock"
            android:icon="@drawable/ic_locked_folder"
            android:title="@string/lock_tips"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/delete"
            android:icon="@drawable/ic_delete"
            android:title="@string/delete"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/hide"
            android:title="@string/hide_tips"
            app:showAsAction="never" />
    </group>
    <group android:id="@+id/group_normal">

        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_search"
            android:title="@string/search"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/remove_ad"
            android:icon="@drawable/ic_drawer_noads"
            android:title="@string/remove_ad"
            app:showAsAction="always" />
        <item
            android:id="@+id/refresh"
            android:icon="@drawable/ic_action_refresh"
            android:title="@string/refresh"
          />
        <item
            android:id="@+id/select"
            android:title="@string/select" />
        <item
            android:id="@+id/private_videos"
            android:title="@string/private_videos" />
        <item
            android:id="@+id/equalizer"
            android:title="@string/equalizer" />
        <item
            android:id="@+id/setting"
            android:title="@string/settings" />
    </group>
</menu>