<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_add_box_black_24dp" android:id="@id/action_new_tab" android:title="@string/action_new_tab" />
    <item android:icon="@drawable/ic_share_black_24dp" android:id="@id/action_share" android:title="@string/action_share" />
    <item android:icon="@drawable/ic_history_black_24dp" android:id="@id/action_history" android:title="@string/action_history" />
    <item android:icon="@drawable/ic_content_copy_black_24dp" android:id="@id/action_copy" android:title="@string/action_copy" />
    <item android:icon="@drawable/ic_bookmark_dark" android:id="@id/action_bookmarks" android:title="@string/action_bookmarks" />
    <item android:icon="@drawable/ic_add_bookmark_black_24dp" android:id="@id/action_add_bookmark" android:title="@string/action_add_bookmark" />
    <item
        android:id="@+id/agent_desktop"
        android:checkable="true"
        android:checked="false"
        android:icon="@drawable/ic_desktop_windows_black_24dp"
        android:title="@string/desktop_site" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings" />
</menu>