<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/group_select_mode">
        <item
            android:id="@+id/lock"
            android:icon="@drawable/ic_locked_folder"
            android:title="@string/lock_tips"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/delete"
            android:icon="@drawable/ic_delete"
            android:title="@string/delete"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/share"
            android:title="@string/share"
            app:showAsAction="never" />
        <item
            android:id="@+id/info"
            android:title="@string/properties"
            app:showAsAction="never" />
    </group>
    <group android:id="@+id/group_normal">
        <item
            android:id="@+id/style"
            android:icon="@drawable/ic_layout_list"
            android:title="@string/layout_style"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/select"
            android:title="@string/select" />
        <item
            android:id="@+id/sort"
            android:title="@string/sort_by" />
    </group>
</menu>