<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16.0dip"
        android:fontFamily="@string/roboto_medium"
        android:text="@string/no_video_resource_title"
        android:textColor="@color/title_color"
        android:textSize="16.0sp" />

    <TextView
        android:id="@+id/no_res_tip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16.0dip"
        android:layout_marginRight="16.0dip"
        android:fontFamily="@string/roboto_regular"
        android:text="@string/no_video_resource"
        android:textColor="@color/sub_title_color"
        android:textSize="14.0sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24.0dip"
        android:src="@mipmap/no_res_tip" />

    <Button
        android:id="@+id/got_it"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16.0dip"
        android:layout_marginTop="24.0dip"
        android:layout_marginRight="16.0dip"
        android:background="@drawable/got_it_backg"
        android:fontFamily="@string/roboto_medium"
        android:text="@string/got_it"
        android:textColor="#ffffffff"
        android:textSize="16.0sp" />

    <TextView
        android:id="@+id/report_to_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16.0dip"
        android:fontFamily="@string/roboto_regular"
        android:gravity="center"
        android:paddingLeft="8.0dip"
        android:paddingTop="4.0dip"
        android:paddingRight="8.0dip"
        android:paddingBottom="4.0dip"
        android:text="@string/report_to_us"
        android:textSize="14.0sp" />
</LinearLayout>