<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="96.0dip"
        android:background="#fff7f7f7"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/no_res_emoj" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16.0dip"
        android:fontFamily="@string/roboto_medium"
        android:gravity="center"
        android:text="@string/thx_feedback_title"
        android:textColor="@color/title_color"
        android:textSize="16.0sp" />

    <TextView
        android:id="@+id/url"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@string/roboto_regular"
        android:gravity="center"
        android:textColor="@color/accent_color"
        android:textSize="14.0sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16.0dip"
        android:layout_marginTop="16.0dip"
        android:layout_marginRight="16.0dip"
        android:fontFamily="@string/roboto_regular"
        android:gravity="center_horizontal"
        android:text="@string/thx_feedback_tip"
        android:textColor="@color/sub_title_color"
        android:textSize="14.0sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16.0dip"
        android:layout_marginTop="4.0dip"
        android:layout_marginRight="16.0dip"
        android:fontFamily="@string/roboto_regular"
        android:gravity="center_horizontal"
        android:text="@string/temporarily_download"
        android:textColor="@color/sub_title_color"
        android:textSize="14.0sp" />

    <Button
        android:id="@+id/ok"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16.0dip"
        android:layout_marginTop="24.0dip"
        android:layout_marginRight="16.0dip"
        android:layout_marginBottom="24.0dip"
        android:background="@drawable/got_it_backg"
        android:fontFamily="@string/roboto_medium"
        android:text="@string/action_ok"
        android:textColor="#ffffffff"
        android:textSize="16.0sp" />
</LinearLayout>