<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/dialog_round_bg">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20.0dip"
        android:paddingBottom="8.0dip">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24.0dip"
            android:paddingRight="24.0dip">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/subtitle"
                android:textColor="#ccffffff"
                android:textSize="18.0sp" />
        </FrameLayout>

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24.0dip"
            android:layout_marginRight="24.0dip"
            android:layout_marginBottom="10.0dip"
            android:text="@string/none"
            android:textColor="#80ffffff"
            android:textSize="12.0sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:background="#ff303032" />

        <TextView
            android:id="@+id/subtitle_select"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:paddingLeft="24.0dip"
            android:paddingTop="13.0dip"
            android:paddingRight="24.0dip"
            android:paddingBottom="13.0dip"
            android:text="@string/select"
            android:textColor="#ccffffff"
            android:textSize="15.0sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/subtitle_open_from"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:paddingLeft="24.0dip"
            android:paddingTop="13.0dip"
            android:paddingRight="24.0dip"
            android:paddingBottom="13.0dip"
            android:text="@string/subtitle_open_from"
            android:textColor="#ccffffff"
            android:textSize="15.0sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/subtitle_download"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:paddingLeft="24.0dip"
            android:paddingTop="13.0dip"
            android:paddingRight="24.0dip"
            android:paddingBottom="13.0dip"
            android:text="@string/subtitle_download"
            android:textColor="#ccffffff"
            android:textSize="15.0sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/subtitle_adjust"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:paddingLeft="24.0dip"
            android:paddingTop="13.0dip"
            android:paddingRight="24.0dip"
            android:paddingBottom="13.0dip"
            android:text="@string/subtitle_adjust"
            android:textColor="#ccffffff"
            android:textSize="15.0sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/subtitle_personality"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:paddingLeft="24.0dip"
            android:paddingTop="13.0dip"
            android:paddingRight="24.0dip"
            android:paddingBottom="13.0dip"
            android:text="@string/subtitle_personality"
            android:textColor="#ccffffff"
            android:textSize="15.0sp"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>