<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60.0dip"
        android:background="@color/setting_background">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="6.0dip"
            android:tint="@color/sub_title_color"
            app:srcCompat="@drawable/ic_action_delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/permission_explained_title"
            android:textColor="@color/title_color"
            android:textSize="14.0sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32.0dip"
        android:layout_marginTop="8.0dip"
        android:layout_marginEnd="32.0dip"
        android:gravity="center_horizontal"
        android:text="@string/without_permission"
        android:textColor="@color/sub_title_color"
        android:textSize="14.0sp" />

    <TextView
        android:id="@+id/tv_allow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32.0dip"
        android:layout_marginTop="32.0dip"
        android:layout_marginEnd="32.0dip"
        android:layout_marginBottom="16.0dip"
        android:background="@drawable/got_it_backg"
        android:gravity="center"
        android:text="@string/allow"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16.0sp" />
</LinearLayout>